# streamway-live-tests

./: forecasting_model.ipynb  forecasting_model.py  main.py  pure_forecast_testing.ipynb  pyproject.toml  streamway_data.csv  swcc_rainfall_data.csv
historic streamway data/: historic ofd streamway (cleaned).csv
