[project]
name = "streamway-live-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.9.21",
    "dash>=3.3.0",
    "jupyter>=1.1.1",
    "keras-tuner>=1.4.8",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pmdarima>=2.1.0",
    "pykernel>=0.1.6",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "skforecast>=0.18.0",
    "statsmodels>=0.14.5",
    "tensorflow>=2.20.0",
    "xgboost>=3.1.1",
]
